--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,17 @@ section {
   line-height: 100px;
   font-size: 60px;
 }
+
+#progressbar {
+  width: 300px;
+  height: 25px;
+  background-color: white;
+}
+
+#insidebar {
+  background-color: green;
+  height: 25px;
+  border: 1px solid black;
+  width: 0%;
+  text-align: center;
+}
